--- a/roster.html
+++ b/roster.html
@@ -182,15 +182,12 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -     Draft 
+<b>Status</b> -        <b><mark>>> Draft<<</mark></b> 
              Pending Confirmation
-          <b><mark>>> Final <<</mark></b>
+             Final 
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Tue 03/11, 12:11)   [Final]<span id = "paraChangelog" style = "display:none">
-             #2 (Sun 01/11, 06:58)   [Pending Confirmation]
-                                     Draft #2
-             #1 (Sat 31/10, 08:55)   Draft #1</span>
+<b>Changelog</b> -  #1 (Fri 06/11, 18:07)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -303,29 +300,6 @@ notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" o
 []: No one available
 / : No one rostered
 
-Shops closed: 
-  Mon - Tradie RDO 
-  Tue - Melbourne Cup
-
-Wed, Thu, Fri - 
-  &  LC 0700-1500 |8.0 
-|=====================================================================|
-| For week starting    Mon       02/11/2020                           |
-|=====================================================================|
-| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
-|---------------------------------------------------------------------|
-|=====================================================================|
-|       CP                                                            |
-| a    0730-1530|      /         /         Nere      Nere     Nere    |
-| b    0730-1530|8.0   /         /         Mum       Bea      Bea     |
-|                                                                     |
-|       LC                                                            |
-| c    0630-1500|      /         /         Mony      Mony     Mony    |
-| d    0700-1130|4.5   /         /         []        []       []      |
-| e    0900-1500|6.0   /         /         Bea&      Sean&    Sean&   |
-|                                                                     |
-|=====================================================================|
-
 Thu, Fri  - 
   &  LC 0700-1500 |8.0 
 |=====================================================================|
@@ -344,6 +318,27 @@ Thu, Fri  -
 | e    0900-1500|6.0   []        Bea       Bea       Sean&    Sean&   |
 |                                                                     |
 |=====================================================================|
+
+<b>
+Thu, Fri  - 
+  &  LC 0700-1500 |8.0 
+|=====================================================================|
+| For week starting    Mon       09/11/2020   MONY'S THOUGHTS  <--    |
+|=====================================================================|
+| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
+|---------------------------------------------------------------------|
+|=====================================================================|
+|       CP                                                            |
+| a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
+| b    0730-1530|8.0   Millie    Millie    Millie    Bea      Bea     |
+|                                                                     |
+|       LC                                                            |
+| c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
+| e    0700-1130|4.5   Sean      Sean      Bea       Sean     Sean    |
+| e    0900-1500|6.0   Yui       Bea       Yui       Yui      Yui     |
+|                                                                     |
+|=====================================================================|
+</b>
 
 Away - 
   Bea - Tue
