--- a/roster.html
+++ b/roster.html
@@ -330,11 +330,11 @@ Thu, Fri  -
 |=====================================================================|
 |       CP                                                            |
 | a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
-| b    0730-1530|8.0   Millie    Millie    Millie    Bea      Bea     |
+| b    0730-1530|8.0   Millie    Millie    Millie    Sean     Bea     |
 |                                                                     |
 |       LC                                                            |
 | c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| e    0700-1130|4.5   Sean      Sean      Bea       Sean     Sean    |
+| e    0700-1130|4.5   Sean      Sean      Bea       Bea      Sean    |
 | e    0900-1500|6.0   Yui       Bea       Yui       Yui      Yui     |
 |                                                                     |
 |=====================================================================|
