--- a/roster.html
+++ b/roster.html
@@ -303,37 +303,37 @@ notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" o
 Thu, Fri  - 
   &  LC 0700-1500 |8.0 
 |=====================================================================|
-| For week starting    Mon       09/11/2020   DRAFT                   |
+| For week starting    Mon       09/11/2020   DRAFT   OLD VERSION     |
 |=====================================================================|
 | Pos   Time           Mon       Tue       Wed       Thu      Fri     |
 |---------------------------------------------------------------------|
 |=====================================================================|
 |       CP                                                            |
 | a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
-| b    0730-1530|8.0   Millie    Millie    Millie    Bea      Bea     |
+| b    0730-1500|7.5   Millie    Millie    Millie    Bea      Bea     |
 |                                                                     |
 |       LC                                                            |
 | c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| e    0700-1130|4.5   Sean      Sean      Sean      []       []      |
-| e    0900-1500|6.0   []        Bea       Bea       Sean&    Sean&   |
+| e    0700-1100|4.0   Sean      Sean      Sean      []       []      |
+| e    0900-1400|5.0   []        Bea       Bea       Sean&    Sean&   |
 |                                                                     |
 |=====================================================================|
 
 <b>
 |=====================================================================|
-| For week starting    Mon       09/11/2020   MONY'S THOUGHTS  <--    |
+| For week starting    Mon       09/11/2020   DRAFT Mony thoughts <-- |
 |=====================================================================|
 | Pos   Time           Mon       Tue       Wed       Thu      Fri     |
 |---------------------------------------------------------------------|
 |=====================================================================|
 |       CP                                                            |
 | a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
-| b    0730-1530|8.0   Millie    Millie    Millie    Sean     Bea     |
+| b    0730-1500|7.5   Millie    Millie    Millie    Sean     Bea     |
 |                                                                     |
 |       LC                                                            |
 | c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| e    0700-1130|4.5   Sean      Sean      Bea       Bea      Sean    |
-| e    0900-1500|6.0   Yui       Bea       Yui       Yui      Yui     |
+| e    0700-1100|4.0   Sean      Sean      Sean      Bea      Sean    |
+| e    0900-1400|5.0   Yui       Bea       Bea       Yui      Yui     |
 |                                                                     |
 |=====================================================================|
 </b>
