--- a/roster.html
+++ b/roster.html
@@ -328,12 +328,12 @@ Thu, Fri  -
 |=====================================================================|
 |       CP                                                            |
 | a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
-| b    0730-1500|7.5   Millie    Millie    Millie    Sean     Bea     |
+| b    0730-1430|7.0   Millie    Millie    Millie    Sean     Bea     |
 |                                                                     |
 |       LC                                                            |
 | c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| e    0700-1100|4.0   Sean      Sean      Sean      Bea      Sean    |
-| e    0900-1400|5.0   Yui       Bea       Bea       Yui      Yui     |
+| e    0700-1100|4.0   Sean      Sean      Bea       Bea      Sean    |
+| e    0900-1400|5.0   Yui       Bea       Sean      Yui      Yui     |
 |                                                                     |
 |=====================================================================|
 </b>
