--- a/roster.html
+++ b/roster.html
@@ -333,7 +333,7 @@ Thu, Fri  -
 |       LC                                                            |
 | c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
 | e    0700-1100|4.0   Sean      Sean      Bea       Bea      Sean    |
-| e    0900-1400|5.0   Yui       Bea       Sean      Yui      Yui     |
+| e    0900-1400|5.0   Yui<del>Bea</del>    Bea       Sean      Yui      Yui     |
 |                                                                     |
 |=====================================================================|
 </b>
@@ -358,6 +358,25 @@ Tue, Thu, Fri  -
 | e    0900-1500|6.0   Bea       Sean&     Bea       Sean&    Sean&   |
 |                                                                     |
 |=====================================================================|
+
+<b>
+ |=====================================================================|
+ | For week starting    Mon       16/11/2020   DRAFT Mony thoughts <-- |
+ |=====================================================================|
+ | Pos   Time           Mon       Tue       Wed       Thu      Fri     |
+ |---------------------------------------------------------------------|
+ |=====================================================================|
+ |       CP                                                            |
+ | a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
+ | b    0730-1430|7.0   Millie    Millie    Millie    Sean     Bea     |
+ |                                                                     |
+ |       LC                                                            |
+ | c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
+ | e    0700-1100|4.0   Sean      Sean      Bea       Bea      Sean    |
+ | e    0900-1400|5.0   Bea       Yui<del>Bea</del>    Sean      Yui      Yui     |
+ |                                                                     |
+ |=====================================================================|
+ </b>
 </em>
 </span></span></div>
 </pre>
