--- a/roster.html
+++ b/roster.html
@@ -333,7 +333,7 @@ Thu, Fri  -
 |       LC                                                            |
 | c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
 | e    0700-1100|4.0   Sean      Sean      Bea       Bea      Sean    |
-| e    0900-1400|5.0   Yui<del>Bea</del>    Bea       Sean      Yui      Yui     |
+| e    0900-1400|5.0   Yui<del><em>Bea</em></del>    Bea       Sean      Yui      Yui     |
 |                                                                     |
 |=====================================================================|
 </b>
@@ -373,7 +373,7 @@ Tue, Thu, Fri  -
  |       LC                                                            |
  | c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
  | e    0700-1100|4.0   Sean      Sean      Bea       Bea      Sean    |
- | e    0900-1400|5.0   Bea       Yui<del>Bea</del>    Sean      Yui      Yui     |
+ | e    0900-1400|5.0   Bea       Yui<del><em>Bea</em></del>    Sean      Yui      Yui     |
  |                                                                     |
  |=====================================================================|
  </b>
