--- a/roster.html
+++ b/roster.html
@@ -332,8 +332,8 @@ Thu, Fri  -
 |                                                                     |
 |       LC                                                            |
 | c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| e    0700-1100|4.0   Sean      Sean      Bea       Bea      Sean    |
-| e    0900-1400|5.0   Yui<del><em>Bea</em></del>    Bea       Sean      Yui      Yui     |
+| e    0700-1100|4.0   Sean      Sean      Sean      Bea      Sean    |
+| e    0900-1400|5.0   Yui<del><em>Bea</em></del>    Bea       Bea       Yui      Yui     |
 |                                                                     |
 |=====================================================================|
 </b>
@@ -372,8 +372,8 @@ Tue, Thu, Fri  -
  |                                                                     |
  |       LC                                                            |
  | c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
- | e    0700-1100|4.0   Sean      Sean      Bea       Bea      Sean    |
- | e    0900-1400|5.0   Bea       Yui<del><em>Bea</em></del>    Sean      Yui      Yui     |
+ | e    0700-1100|4.0   Sean      Sean      Sean      Bea      Sean    |
+ | e    0900-1400|5.0   Bea       Yui<del><em>Bea</em></del>    Bea       Yui      Yui     |
  |                                                                     |
  |=====================================================================|
  </b>
