--- a/roster.html
+++ b/roster.html
@@ -329,12 +329,12 @@ Thu, Fri  -
 |=====================================================================|
 |       CP                                                            |
 | a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
-| b    0730-1430|7.0   Millie    Millie    Millie    Sean     Bea     |
+| b    0730-1430|7.0   Millie    Millie    Millie    Millie   Bea     |
 |                                                                     |
 |       LC                                                            |
 | c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
 | e    0700-1100|4.0   Sean      Sean      Sean      Bea      Sean    |
-| e    0900-1400|5.0   Yui<del><em>Bea</em></del>    Bea       Bea       Yui      Yui     |
+| e    0900-1400|5.0   Yui<del><em>Bea</em></del>    Bea       Bea       Sean     Yui     |
 |                                                                     |
 |=====================================================================|
 </b>
@@ -369,12 +369,12 @@ Tue, Thu, Fri  -
  |=====================================================================|
  |       CP                                                            |
  | a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
- | b    0730-1430|7.0   Millie    Millie    Millie    Sean     Bea     |
+ | b    0730-1430|7.0   Millie    Millie    Millie    Millie   Bea     |
  |                                                                     |
  |       LC                                                            |
  | c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
  | e    0700-1100|4.0   Sean      Sean      Sean      Bea      Sean    |
- | e    0900-1400|5.0   Bea       Yui<del><em>Bea</em></del>    Bea       Yui      Yui     |
+ | e    0900-1400|5.0   Bea       Yui<del><em>Bea</em></del>    Bea       Sean     Yui     |
  |                                                                     |
  |=====================================================================|
  </b>
