--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,9 @@ B3 ROSTER
              Final 
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Sat 07/11, 14:21)   Changes
+<b>Changelog</b> -  #4 (Sat 07/11, 17:26)   Changes
+             #3 (Sat 07/11,      )   Changes
+             #2 (Sat 07/11, 14:21)   Changes
              #1 (Fri 06/11, 18:07)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
@@ -321,6 +323,8 @@ Thu, Fri  -
 |=====================================================================|
 
 <b>
+ Away - 
+ Bea: Mon
 |=====================================================================|
 | For week starting    Mon       09/11/2020   DRAFT Mony thoughts <-- |
 |=====================================================================|
@@ -329,18 +333,18 @@ Thu, Fri  -
 |=====================================================================|
 |       CP                                                            |
 | a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
-| b    0730-1430|7.0   Millie    Millie    Millie    Millie   Bea     |
+| b    0730-1430|7.0   Millie    Millie    Millie    Sean     Millie  |
 |                                                                     |
 |       LC                                                            |
 | c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| e    0700-1130|4.5   Sean      Sean      Sean      Bea      Sean    |
-| e    0900-1400|5.0   Yui<del><em>Bea</em></del>    Bea       Bea       Sean     Yui     |
+| e    0700-1130|4.5   Sean      Sean      Sean      Bea      Bea     |
+| e    0900-1400|5.0   Yui       Bea       Bea       Yui      Sean    |
 |                                                                     |
 |=====================================================================|
 </b>
 
 Away - 
-  Bea - Tue
+  Bea: Tue
 Tue, Thu, Fri  - 
   &  LC 0700-1500 |8.0 
 |=====================================================================|
@@ -361,22 +365,24 @@ Tue, Thu, Fri  -
 |=====================================================================|
 
 <b>
- |=====================================================================|
- | For week starting    Mon       16/11/2020   DRAFT Mony thoughts <-- |
- |=====================================================================|
- | Pos   Time           Mon       Tue       Wed       Thu      Fri     |
- |---------------------------------------------------------------------|
- |=====================================================================|
- |       CP                                                            |
- | a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
- | b    0730-1430|7.0   Millie    Millie    Millie    Millie   Bea     |
- |                                                                     |
- |       LC                                                            |
- | c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
- | e    0700-1130|4.5   Sean      Sean      Sean      Bea      Sean    |
- | e    0900-1400|5.0   Bea       Yui<del><em>Bea</em></del>    Bea       Sean     Yui     |
- |                                                                     |
- |=====================================================================|
+ Away - 
+  Bea: Tue
+|=====================================================================|
+| For week starting    Mon       16/11/2020   DRAFT Mony thoughts <-- |
+|=====================================================================|
+| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
+|---------------------------------------------------------------------|
+|=====================================================================|
+|       CP                                                            |
+| a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
+| b    0730-1430|7.0   Millie    Millie    Millie    Sean     Millie  |
+|                                                                     |
+|       LC                                                            |
+| c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
+| e    0700-1130|4.5   Sean      Sean      Sean      Bea      Bea     |
+| e    0900-1400|5.0   Bea       Yui       Bea       Yui      Sean    |
+|                                                                     |
+|=====================================================================|
  </b>
 </em>
 </span></span></div>
