--- a/roster.html
+++ b/roster.html
@@ -182,12 +182,14 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -  <b><mark>>> Draft<<</mark></b> 
-             Pending Confirmation
+<b>Status</b> -     Draft 
+             <b><mark>>> Pending Confirmation <<</mark></b>
              Final 
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #5 (Sat 07/11, 17:51)   Changes
+<b>Changelog</b> -  #6 (Sun 08/11, 06:30)   [Pending Confirmation]
+             #5 (Sat 07/11,      )   Changes
+             #5 (Sat 07/11, 17:51)   Changes
              #4 (Sat 07/11, 17:26)   Changes
              #3 (Sat 07/11,      )   Changes
              #2 (Sat 07/11, 14:21)   Changes
@@ -304,30 +306,10 @@ notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" o
 []: No one available
 / : No one rostered
 
-Thu, Fri  - 
-  &  LC 0700-1500 |8.0 
-|=====================================================================|
-| For week starting    Mon       09/11/2020   DRAFT   OLD VERSION     |
-|=====================================================================|
-| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
-|---------------------------------------------------------------------|
-|=====================================================================|
-|       CP                                                            |
-| a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
-| b    0730-1500|7.5   Millie    Millie    Millie    Bea      Bea     |
-|                                                                     |
-|       LC                                                            |
-| c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| e    0700-1100|4.0   Sean      Sean      Sean      []       []      |
-| e    0900-1400|5.0   []        Bea       Bea       Sean&    Sean&   |
-|                                                                     |
-|=====================================================================|
-
-<b>
  Bea:  Away Monday
  Sean: Monday LC & 0700-1400 |7.0 
 |=====================================================================|
-| For week starting    Mon       09/11/2020   DRAFT Mony thoughts <-- |
+| For week starting    Mon       09/11/2020                           |
 |=====================================================================|
 | Pos   Time           Mon       Tue       Wed       Thu      Fri     |
 |---------------------------------------------------------------------|
@@ -342,33 +324,11 @@ Thu, Fri  -
 | e    0900-1400|5.0   Yui       Bea       Bea       Sean&    Sean    |
 |                                                                     |
 |=====================================================================|
-</b>
 
-Away - 
-   Bea: Tue
-Tue, Thu, Fri  - 
-   &  LC 0700-1500 |8.0 
-|=====================================================================|
-| For week starting    Mon       16/11/2020   DRAFT                   |
-|=====================================================================|
-| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
-|---------------------------------------------------------------------|
-|=====================================================================|
-|       CP                                                            |
-| a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
-| b    0730-1530|8.0   Millie    Millie    Millie    Bea      Bea     |
-|                                                                     |
-|       LC                                                            |
-| c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| e    0700-1130|4.5   Sean      []        Sean      []       []      |
-| e    0900-1500|6.0   Bea       Sean&     Bea       Sean&    Sean&   |
-|                                                                     |
-|=====================================================================|
-
-<b>
 Bea:  Away Tuesday
+Sean: Monday LC & 0700-1400 |7.0
 |=====================================================================|
-| For week starting    Mon       16/11/2020   DRAFT Mony thoughts <-- |
+| For week starting    Mon   16/11/2020    DRAFT                      |
 |=====================================================================|
 | Pos   Time           Mon       Tue       Wed       Thu      Fri     |
 |---------------------------------------------------------------------|
@@ -383,7 +343,6 @@ Bea:  Away Tuesday
 | e    0900-1400|5.0   Bea       Yui       Bea       Sean&    Sean    |
 |                                                                     |
 |=====================================================================|
- </b>
 </em>
 </span></span></div>
 </pre>
