--- a/roster.html
+++ b/roster.html
@@ -307,7 +307,7 @@ notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" o
 / : No one rostered
 
  Bea:  Away Monday
- Sean: Monday LC & 0700-1400 |7.0 
+ Sean: Thursday LC & 0700-1400 |7.0 
 |=====================================================================|
 | For week starting    Mon    09/11/2020                              |
 |=====================================================================|
@@ -326,7 +326,7 @@ notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" o
 |=====================================================================|
 
 Bea:  Away Tuesday
-Sean: Monday LC & 0700-1400 |7.0
+Sean: Thursday LC & 0700-1400 |7.0
 |=====================================================================|
 | For week starting    Mon   16/11/2020    DRAFT                      |
 |=====================================================================|
@@ -341,6 +341,24 @@ Sean: Monday LC & 0700-1400 |7.0
 | c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
 | e    0700-1130|4.5   Sean      Sean      Sean      Mum      Bea     |
 | e    0900-1400|5.0   Bea       Yui       Bea       Sean&    Sean    |
+|                                                                     |
+|=====================================================================|
+
+Sean: Tuesday LC & 0700-1400 |7.0
+|=====================================================================|
+| For week starting    Mon   23/11/2020    DRAFT                      |
+|=====================================================================|
+| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
+|---------------------------------------------------------------------|
+|=====================================================================|
+|       CP                                                            |
+| a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
+| b    0730-1430|7.0   Millie    Millie    Millie    Bea      Millie  |
+|                                                                     |
+|       LC                                                            |
+| c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
+| e    0700-1130|4.5   Sean      []        Sean      Sean     Bea     |
+| e    0900-1400|5.0   Bea       Sean&     Bea       Yui      Sean    |
 |                                                                     |
 |=====================================================================|
 </em>
