--- a/roster.html
+++ b/roster.html
@@ -320,7 +320,7 @@ notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" o
 |                                                                     |
 |       LC                                                            |
 | c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| e    0700-1130|4.5   Sean      Sean      Sean      Mum      Bea     |
+| d    0700-1130|4.5   Sean      Sean      Sean      Mum      Bea     |
 | e    0900-1400|5.0   Yui       Bea       Bea       Sean&    Sean    |
 |                                                                     |
 |=====================================================================|
@@ -339,7 +339,7 @@ Sean: Thursday LC & 0700-1400 |7.0
 |                                                                     |
 |       LC                                                            |
 | c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| e    0700-1130|4.5   Sean      Sean      Sean      Mum      Bea     |
+| d    0700-1130|4.5   Sean      Sean      Sean      Mum      Bea     |
 | e    0900-1400|5.0   Bea       Yui       Bea       Sean&    Sean    |
 |                                                                     |
 |=====================================================================|
@@ -357,7 +357,7 @@ Sean: Tuesday LC & 0700-1400 |7.0
 |                                                                     |
 |       LC                                                            |
 | c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| e    0700-1130|4.5   Sean      []        Sean      Sean     Bea     |
+| d    0700-1130|4.5   Sean      []        Sean      Sean     Bea     |
 | e    0900-1400|5.0   Bea       Sean&     Bea       Yui      Sean    |
 |                                                                     |
 |=====================================================================|
