--- a/roster.html
+++ b/roster.html
@@ -357,7 +357,7 @@ Sean: Tuesday LC & 0700-1400 |7.0
 |                                                                     |
 |       LC                                                            |
 | c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| d    0700-1130|4.5   Sean      []        Sean      Sean     Bea     |
+| d    0700-1130|4.5   Sean      Mum       Sean      Sean     Bea     |
 | e    0900-1400|5.0   Bea       Sean&     Bea       Yui      Sean    |
 |                                                                     |
 |=====================================================================|
