--- a/roster.html
+++ b/roster.html
@@ -183,11 +183,12 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft 
-          <b><mark>>> Pending Confirmation <<</mark></b>
-             Final 
+             Pending Confirmation
+          <b><mark>>> Final <<</mark></b> 
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #7 (Sun 08/11, 06:30)   [Pending Confirmation]
+<b>Changelog</b> -  #8 (Sun 08/11, 18:05)   [Final]<span id = "paraChangelog" style = "display:none">
+             #7 (Sun 08/11, 06:30)   [Pending Confirmation]
              #6 (Sat 07/11,      )   Changes
              #5 (Sat 07/11, 17:51)   Changes
              #4 (Sat 07/11, 17:26)   Changes
