--- a/roster.html
+++ b/roster.html
@@ -182,18 +182,12 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -     Draft 
-          <b><mark>>> Pending Confirmation <<</mark></b>
+<b>Status</b> -  <b><mark>>> Draft <<</mark></b> 
+             Pending Confirmation
              Final 
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #7 (Sun 08/11, 06:30)   [Pending Confirmation]
-             #6 (Sat 07/11,      )   Changes
-             #5 (Sat 07/11, 17:51)   Changes
-             #4 (Sat 07/11, 17:26)   Changes
-             #3 (Sat 07/11,      )   Changes
-             #2 (Sat 07/11, 14:21)   Changes
-             #1 (Fri 06/11, 18:07)   Draft #1</span>
+<b>Changelog</b> -  #1 (Sat 14/11, 09:17)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -306,29 +300,12 @@ notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" o
 []: No one available
 / : No one rostered
 
- Bea:  Away Monday
- Sean: Thursday LC & 0700-1400 |7.0 
-|=====================================================================|
-| For week starting    Mon    09/11/2020                              |
-|=====================================================================|
-| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
-|---------------------------------------------------------------------|
-|=====================================================================|
-|       CP                                                            |
-| a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
-| b    0730-1430|7.0   Millie    Millie    Millie    Bea      Millie  |
-|                                                                     |
-|       LC                                                            |
-| c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| d    0700-1130|4.5   Sean      Sean      Sean      Mum      Bea     |
-| e    0900-1400|5.0   Yui       Bea       Bea       Sean&    Sean    |
-|                                                                     |
-|=====================================================================|
+Monday: Tradies RDO
 
-Bea:  Away Tuesday
+Bea:  Monday:  LC * 1100-1500 |4.0, Tuesday: Away
 Sean: Thursday LC & 0700-1400 |7.0
 |=====================================================================|
-| For week starting    Mon   16/11/2020    DRAFT                      |
+| For week starting    Mon   16/11/2020                               |
 |=====================================================================|
 | Pos   Time           Mon       Tue       Wed       Thu      Fri     |
 |---------------------------------------------------------------------|
@@ -340,7 +317,7 @@ Sean: Thursday LC & 0700-1400 |7.0
 |       LC                                                            |
 | c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
 | d    0700-1130|4.5   Sean      Sean      Sean      Mum      Bea     |
-| e    0900-1400|5.0   Bea       Yui       Bea       Sean&    Sean    |
+| e    0900-1400|5.0   Bea*      Yui       Bea       Sean&    Sean    |
 |                                                                     |
 |=====================================================================|
 
