--- a/roster.html
+++ b/roster.html
@@ -183,11 +183,12 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft 
-          <b><mark>>> Pending Confirmation <<</mark></b>
-             Final 
+             Pending Confirmation
+             <b><mark>>> Final <<</mark></b> 
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Sun 15/11, 13:51)   D
+<b>Changelog</b> -  #3 (Sun 15/11, 17:06)   [Final]<span id = "paraChangelog" style = "display:none">
+             #2 (Sun 15/11, 13:51)   [Pending Confirmtion]
              #1 (Sat 14/11, 09:17)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
