--- a/roster.html
+++ b/roster.html
@@ -323,7 +323,10 @@ Sean: Thursday LC & 0700-1400 |7.0
 |                                                                     |
 |=====================================================================|
 
-Sean: Tuesday LC & 0700-1400 |7.0
+Millie: Monday  CP % 0900-1430 |5.5
+Bea:    Monday   CP % 0730-0900 |1.5 
+             --> LC   0900-1400 |5.0
+Sean:   Tuesday LC & 0700-1400 |7.0
 |=====================================================================|
 | For week starting    Mon   23/11/2020    DRAFT                      |
 |=====================================================================|
@@ -332,12 +335,12 @@ Sean: Tuesday LC & 0700-1400 |7.0
 |=====================================================================|
 |       CP                                                            |
 | a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
-| b    0730-1430|7.0   Millie    Millie    Millie    Bea      Millie  |
+| b    0730-1430|7.0   Millie%   Millie    Millie    Bea      Millie  |
 |                                                                     |
 |       LC                                                            |
 | c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
 | d    0700-1130|4.5   Sean      Mum       Sean      Sean     Bea     |
-| e    0900-1400|5.0   Bea       Sean&     Bea       Yui      Sean    |
+| e    0900-1400|5.0   Bea%      Sean&     Bea       Yui      Sean    |
 |                                                                     |
 |=====================================================================|
 </em>
