--- a/roster.html
+++ b/roster.html
@@ -301,12 +301,9 @@ notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" o
 []: No one available
 / : No one rostered
 
-Monday: Tradies RDO
-
-Millie: Monday  CP % 0900-1430 |5.5
-Bea:    Monday   CP % 0730-0900 |1.5 
-             --> LC % 0900-1400 |5.0
-Sean:   Tuesday LC & 0700-1400 |7.0
+Millie: Monday  CP % 0900-1430|5.5
+Bea:    Monday  CP % 0730-0900|1.5 -> 
+                LC % 0900-1500|6.0
 |=====================================================================|
 | For week starting    Mon   23/11/2020                               |
 |=====================================================================|
