--- a/roster.html
+++ b/roster.html
@@ -182,14 +182,12 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -     Draft 
+<b>Status</b> -  <b><mark>>> Draft <<</mark></b> 
              Pending Confirmation
-          <b><mark>>> Final <<</mark></b> 
+             Final  
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Sun 22/11, 14:06)   [Final]<span id = "paraChangelog" style = "display:none"></span>
-             #2 (Sun 22/11, 06:43)   [Pending Confirmation]
-             #1 (Sat 21/11, 07:25)   Draft #1</span>
+<b>Changelog</b> -  #1 (Sat 28/11, 09:01)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -306,7 +304,7 @@ Millie: Monday  CP % 0900-1430|5.5
 Bea:    Monday  CP % 0730-0900|1.5 -> 
                 LC % 0900-1500|6.0
 |=====================================================================|
-| For week starting    Mon   23/11/2020                               |
+| For week starting    Mon   30/11/2020                               |
 |=====================================================================|
 | Pos   Time           Mon       Tue       Wed       Thu      Fri     |
 |---------------------------------------------------------------------|
@@ -319,23 +317,6 @@ Bea:    Monday  CP % 0730-0900|1.5 ->
 | c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
 | d    0700-1130|4.5   Sean      Sean      Sean      Bea      Bea     |
 | e    0900-1500|6.0   Bea%      Bea       Bea       Yui      Sean    |
-|                                                                     |
-|=====================================================================|
-
-|=====================================================================|
-| For week starting    Mon   30/11/2020    DRAFT                      |
-|=====================================================================|
-| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
-|---------------------------------------------------------------------|
-|=====================================================================|
-|       CP                                                            |
-| a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
-| b    0730-1430|7.0   Millie    Millie    Millie    Sean     Millie  |
-|                                                                     |
-|       LC                                                            |
-| c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| d    0700-1130|4.5   Sean      Sean      Sean      Bea      Bea     |
-| e    0900-1500|6.0   Bea       Bea       Bea       Yui      Sean    |
 |                                                                     |
 |=====================================================================|
 
