--- a/roster.html
+++ b/roster.html
@@ -339,6 +339,24 @@ Bea:    Monday  CP % 0730-0900|1.5 ->
 |                                                                     |
 |=====================================================================|
 
+Bea:  Monday - Away
+|=====================================================================|
+| For week starting    Mon   14/12/2020    DRAFT                      |
+|=====================================================================|
+| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
+|---------------------------------------------------------------------|
+|=====================================================================|
+|       CP                                                            |
+| a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
+| b    0730-1430|7.0   Millie    Millie    Millie    Sean     Millie  |
+|                                                                     |
+|       LC                                                            |
+| c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
+| d    0700-1130|4.5   Sean      Sean      Sean      Bea      Bea     |
+| e    0900-1500|6.0   Yui       Bea       Bea       Yui      Sean    |
+|                                                                     |
+|=====================================================================|
+
 </em>
 </span></span></div>
 </pre>
