--- a/roster.html
+++ b/roster.html
@@ -182,12 +182,13 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -  <b><mark>>> Draft<<</mark></b> 
-             Pending Confirmation
+<b>Status</b> -     Draft
+          <b><mark>>> Pending Confirmation <<</mark></b> 
              Final 
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #1 (Sat 05/12, 06:41)   Draft #1</span>
+<b>Changelog</b> -  #2 (Sat 05/12, 10:31)   [Pending Confirmation]
+             #1 (Sat 05/12, 06:41)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -354,6 +355,43 @@ Bea:  Monday - Away
 | e    0900-1500|6.0   Yui       Bea       Bea       Yui      Sean    |
 |                                                                     |
 |=====================================================================|
+
+|=====================================================================|
+| For week starting    Mon   21/12/2020    DRAFT                      |
+|=====================================================================|
+| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
+|---------------------------------------------------------------------|
+|=====================================================================|
+|       CP                                                            |
+| a    0730-1530|      Nere      Nere      Nere      /        /       |
+| b    0730-1430|7.0   Millie    Millie    Millie    /        /       |
+|                                                                     |
+|       LC                                                            |
+| c    0630-1500|      Mony      Mony      Mony      /        /       |
+| d    0700-1130|4.5   Sean      Sean      Sean      /        /       |
+| e    0900-1500|6.0   Bea       Bea       Bea       /        /       |
+|                                                                     |
+|=====================================================================|
+
+[Closed For week starting Monday 28/12/2020 -- Sunday 03/01/2021]
+
+|=====================================================================|
+| For week starting    Mon   04/01/2021    DRAFT                      |
+|=====================================================================|
+| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
+|---------------------------------------------------------------------|
+|=====================================================================|
+|       CP                                                            |
+| a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
+| b    0730-1430|7.0   Millie    Millie    Millie    Sean     Millie  |
+|                                                                     |
+|       LC                                                            |
+| c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
+| d    0700-1130|4.5   Sean      Sean      Sean      Bea      Bea     |
+| e    0900-1500|6.0   Bea       Bea       Bea       Yui      Sean    |
+|                                                                     |
+|=====================================================================|
+
 
 </em>
 </span></span></div>
