--- a/roster.html
+++ b/roster.html
@@ -373,7 +373,9 @@ Bea:  Monday - Away
 |                                                                     |
 |=====================================================================|
 
-[Closed For week starting Monday 28/12/2020 -- Sunday 03/01/2021]
+// First day of Christmas break: <b>Thursday 24 Dec 2020</b>
+//  Closed For week starting Monday 28/12/2020 
+// First day of re-opening 2021: <b>Monday 04 Jan, 2021</b>
 
 |=====================================================================|
 | For week starting    Mon   04/01/2021    DRAFT                      |
