--- a/roster.html
+++ b/roster.html
@@ -341,7 +341,7 @@ Bea:    Monday  CP % 0730-0900|1.5 ->
 // First day of Christmas break: <b>Thursday 24 Dec 2020</b>
 //  Closed For week starting Monday 28/12/2020 
 // First day of re-opening 2021: <b>Monday 04 Jan, 2021</b>
-<mark style="text-decoration-color:#CCCCCC;">
+<mark style="color:#CCCCCC;">
 |=====================================================================|
 | For week starting    Mon   28/12/2020    Closed for Christmas       |
 |=====================================================================|
