--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
              Final  
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Sun 20/12, 10:35)   [Pending Confirmation]
+<b>Changelog</b> -  #3 (Sun 20/12, 15:14)   Draft #2
+             #2 (Sun 20/12, 10:35)   [Pending Confirmation]
              #1 (Sat 19/12, 07:26)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
@@ -333,8 +334,8 @@ Bea:    Monday  CP % 0730-0900|1.5 ->
 |                                                                     |
 |       LC                                                            |
 | c    0630-1500|      Mony      Mony      Mony      /        /       |
-| d    0700-1130|4.5   Sean      Sean      Sean      /        /       |
-| e    0900-1500|6.0   Bea       Bea       Bea       /        /       |
+| d    0700-1130|4.5   Sean      Sean      Bea       /        /       |
+| e    0900-1500|6.0   Bea       Bea       Sean      /        /       |
 |                                                                     |
 |=====================================================================|
 
