--- a/roster.html
+++ b/roster.html
@@ -183,11 +183,12 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-          <b><mark>>> Pending Confirmation <<</mark></b> 
-             Final  
+             Pending Confirmation 
+          <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Sun 20/12, 15:14)   Draft #2
+<b>Changelog</b> -  #4 (Sun 20/12, 18:39)   [Final]<span id = "paraChangelog" style = "display:none"></span>
+             #3 (Sun 20/12, 15:14)   Draft #2
              #2 (Sun 20/12, 10:35)   [Pending Confirmation]
              #1 (Sat 19/12, 07:26)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
