--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
           <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #4 (Sun 20/12, 18:39)   [Final]<span id = "paraChangelog" style = "display:none"></span>
+<b>Changelog</b> -  #5 (Tue 22/12, 16:38)   Changes for Wed
+             #4 (Sun 20/12, 18:39)   [Final]<span id = "paraChangelog" style = "display:none"></span>
              #3 (Sun 20/12, 15:14)   Draft #2
              #2 (Sun 20/12, 10:35)   [Pending Confirmation]
              #1 (Sat 19/12, 07:26)   Draft #1</span>
@@ -323,6 +324,8 @@ Bea:    Monday  CP % 0730-0900|1.5 ->
 |                                                                     |
 |=====================================================================|
 -->
+Bea:  @ Wed CP 1030-1500 (4.5)
+Sean: & Wed LC 0700-1430 (7.5)
 |=====================================================================|
 | For week starting    Mon   21/12/2020                               |
 |=====================================================================|
@@ -332,11 +335,12 @@ Bea:    Monday  CP % 0730-0900|1.5 ->
 |       CP                                                            |
 | a    0730-1530|      Nere      Nere      Nere      /        /       |
 | b    0730-1430|7.0   Millie    Millie    Millie    /        /       |
+| @    1030-1500|      /         /         Bea@      /        /       |
 |                                                                     |
 |       LC                                                            |
 | c    0630-1500|      Mony      Mony      Mony      /        /       |
-| d    0700-1130|4.5   Sean      Sean      Bea       /        /       |
-| e    0900-1500|6.0   Bea       Bea       Sean      /        /       |
+| d    0700-1130|4.5   Sean      Sean      /         /        /       |
+| e    0900-1500|6.0   Bea       Bea       Sean&     /        /       |
 |                                                                     |
 |=====================================================================|
 
